[Narenthra Kishore] Add : the form has been validated

--- a/html/form.html
+++ b/html/form.html
@@ -6,7 +6,8 @@
     <title>Html Forms</title>
     <link rel="stylesheet" href="./../css/Formstyle.css" />
     <link rel="stylesheet" href="./../css/main.css" />
-  </head>
+    <script src="../js/FormValidation.js"></script>
+</head>
   <body>
     <header class="header">
       <div class="logo">
